006 admin site completion (#4)
* Added phases 4, 5, 6, 7 to implementation to complete the MVP

* feat: added feature to upload content & ads

* Develop admin site
